# studentbudgetwars

./: .gitignore  ACTIVE_HANDOFF.md  ARCHITECTURE.md  PREVIEWING.md  README.md  bootstrap_windows.bat  live_preview.bat  live_preview_classic.bat  live_preview_desktop.bat  open_classic.command  open_desktop.command  pyproject.toml  run_tests.py  test_results.txt  test_results_final.txt  test_results_phase34.txt  update_careers.py  update_credit.py  update_transport.py
content/classic/: README.md
content/desktop/: README.md
content/shared/: README.md
data/: careers.json  cities.json  commodities.json  config.json  consequence_matrix.json  districts.json  education.json  events.json  expenses.json  focus_actions.json  gigs.json  housing.json  items.json  jobs.json  learn_topics.json  locations.json  presets.json  scoring.json  services.json  status_arcs.json  transport.json  wealth_strategies.json  win_states.json
data/balance/: difficulty_modifiers.json  exam_weeks.json  price_curves.json  scoring_weights.json
docs/: codex-rules.md  data-schema.md  gameplay-loop.md  product.md  surgical-rebuild-roadmap.md
docs/plans/: 2026-04-08-classic-learn-drawer-pressure-integration.md  2026-04-08-classic-ui-hierarchy-refactor.md  2026-04-09-classic-master-repair-roadmap.md  (+12 more)
research/: assumption_log.md  balancing_notes.md  cost_inputs.csv
tests/: conftest.py  test_balance_profiles.py  test_career_progression_v3.py  test_consequence_depth.py  test_content_loading.py  test_data_files.py  test_decision_depth.py  test_desktop_windowing.py  test_event_choices_and_win_states.py  test_event_semantics.py  test_events.py  test_finish_pass_truth.py  test_gameplay_engine.py  test_gigs.py  test_inventory.py  test_loaders.py  test_loop_redesign.py  test_market_generation.py  test_mode_architecture.py  test_month_resolution.py  test_save_load.py  test_saves.py  test_simulation.py  test_status_arcs.py  test_temporary_effects.py  test_travel.py  test_turn_resolution.py  test_validators.py
tools/: import_costs_from_csv.py  seed_baselines.py  simulate_runs.py  validate_data.py
(+111 files in other folders)
