[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-budget-wars"
version = "0.1.0"
description = "Retro desktop after-graduation life strategy game."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.7,<3.0",
  "eval-type-backport>=0.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
budgetwars = "budgetwars.main:main"
budgetwars-classic = "budgetwars.main:main_classic"
budgetwars-desktop = "budgetwars.main:main_desktop"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
